--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Starting Section Of Game  -->
     <div id="First-Section">
     <h1 id="First-Section-Text-container">
-        Collect The Chocolates In<br>The Box And Wine The Game!
+        Collect The Chocolates In<br>The Box And Win The Game!
         </h1>
     <img  id="First-Section-Chocolate" src="assets/chocolate.png" alt="chocolateImage">
     </div>
